--- a/package.json
+++ b/package.json
@@ -16,15 +16,20 @@
   "devDependencies": {
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
+    "aws-cdk": "2.118.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
-    "aws-cdk": "2.118.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.3.3"
   },
   "dependencies": {
+    "@aws-sdk/client-athena": "^3.777.0",
+    "@aws-sdk/client-cognito-identity-provider": "^3.777.0",
+    "@aws-sdk/client-dynamodb": "^3.777.0",
+    "@aws-sdk/client-s3": "^3.777.0",
     "aws-cdk-lib": "2.118.0",
     "constructs": "^10.0.0",
+    "dotenv": "^16.4.7",
     "source-map-support": "^0.5.21"
   }
-} 
+}
