--- a/test/integration/.env.example
+++ b/test/integration/.env.example
@@ -2,5 +2,11 @@
 APPSYNC_API_URL=https://your-api-endpoint.appsync-api.region.amazonaws.com/graphql
 APPSYNC_API_KEY=your-api-key
 
+# Cognito Configuration
+COGNITO_USER_POOL_ID=your-user-pool-id
+COGNITO_CLIENT_ID=your-client-id
+TEST_USERNAME=test-user
+TEST_PASSWORD=your-test-password
+
 # Optional: Test Configuration
 TEST_TIMEOUT=30000 
