Got backend working but with claude

--- a/test/integration/.env.example
+++ b/test/integration/.env.example
@@ -8,5 +8,20 @@ COGNITO_CLIENT_ID=your-client-id
 TEST_USERNAME=test-user
 TEST_PASSWORD=your-test-password
 
+# S3 Configuration
+RESULTS_BUCKET=query-results-account-region
+UPLOAD_BUCKET=csv-uploads-account-region
+
+# DynamoDB Configuration
+CHAT_HISTORY_TABLE=chat-history-account-region
+CSV_METADATA_TABLE=csv-metadata-account-region
+SAVED_RESULTS_TABLE=saved-results-account-region
+
+# Athena Configuration
+ATHENA_WORKGROUP=switchblade-workgroup-account-region
+
+# Bedrock Configuration
+NOVA_API_KEY=your-nova-api-key
+
 # Optional: Test Configuration
 TEST_TIMEOUT=30000 
