--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@aws-sdk/client-athena": "^3.777.0",
     "@aws-sdk/client-cognito-identity-provider": "^3.777.0",
     "@aws-sdk/client-dynamodb": "^3.777.0",
+    "@aws-sdk/client-iam": "^3.777.0",
     "@aws-sdk/client-s3": "^3.777.0",
     "aws-cdk-lib": "2.118.0",
     "constructs": "^10.0.0",
